# b2rust

./: .env  .gitignore  Cargo.toml  Dockerfile  bun.lockb  docker-compose.yml  package.json
docker/: bun.dockerfile  rust.dockerfile
migrations/: 20240925131559_users.up.sql  20240926132318_daftar_belanjaan.down.sql  20240926132318_daftar_belanjaan.up.sql
src/: app_data.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/users/: mod.rs  service_create.rs  service_delete.rs  service_read_all.rs  service_read_one.rs  service_update.rs
src/pages/: daftar_belanjaan.rs  hey.rs  home.rs  mod.rs
structure/migrations/: 20240821135530_users.up.sql  20240821135954_book.down.sql  20240821135954_book.up.sql  20240821141044_seed.up.sql
templates/: daftar_belanjaan.html  index.html
